--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="EN" dir="ltr">
 <head>
+    <link rel="stylesheet" href="./styles/2-common.css">
+    <link rel="stylesheet" href="./styles/2-header.css">
+    <link rel="stylesheet" href="./styles/2-footer.css">
     <title></title>
 </head>
 <body>
