--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="EN" dir="ltr">
 <head>
-    <title></title>
+    <title>HBnB</title>
     <style>
         body {
             margin: 0;
