--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./styles/2-common.css">
     <link rel="stylesheet" href="./styles/2-header.css">
     <link rel="stylesheet" href="./styles/2-footer.css">
-    <title></title>
+    <title>HBnB</title>
 </head>
 <body>
     <header></header>
