--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -4,13 +4,11 @@
     <link rel="stylesheet" href="./styles/3-common.css">
     <link rel="stylesheet" href="./styles/3-header.css">
     <link rel="stylesheet" href="./styles/3-footer.css">
-    <link rel="icon" type="image/png" href="./icon.png">
+    <link rel="icon" type="image/png" href="./images/icon.png">
     <title></title>
 </head>
 <body>
-    <header>
-        <img src="./logo.png" alt="HBnB logo">
-    </header>
+    <header class="logo-header"></header>
     <footer>
         <p>Holberton School</p>
     </footer>
