--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./styles/3-header.css">
     <link rel="stylesheet" href="./styles/3-footer.css">
     <link rel="icon" type="image/png" href="./images/icon.png">
-    <title></title>
+    <title>HBnB</title>
 </head>
 <body>
     <header class="logo-header"></header>
